argocd/base/qbittorrent-seed/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-seed
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent-seed.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: qbittorrent-seed
          port: 8080
  tls: {}
